# etsl

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: algorithm.hpp  etsl_file.hpp  etsl_frame_writer.hpp  etsl_parser.hpp  etsl_predicate.hpp  etsl_tokenizer.hpp  main.cpp  util.hpp
